[project]
name = "hand-pong"
version = "0.1.0"
description = "Hand tracking Pong game using OpenCV and MediaPipe"
requires-python = ">=3.10"

authors = [
    { name = "omar al ethamat" }
]

dependencies = [
    "opencv-python",
    "cvzone",
    "numpy",
    "pygame",
    "mediapipe==0.10.5"
]

[project.scripts]
hand-pong = "SRC.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SRC*"]

[tool.setuptools.package-data]
"*" = [
    "img/*",
    "sound/*"
]